# tap-optiply

./: .env  README.md  pyproject.toml  requirements.txt  tox.ini
tap_optiply/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  conftest.py  test_client.py  test_core.py  test_streams.py
