[tool.poetry]
name = "tap-optiply"
version = "0.1.0"
description = "Singer tap for Optiply API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "tap_optiply"}]

[tool.poetry.dependencies]
python = "^3.8"
singer-sdk = "^0.34.0"
requests = "^2.31.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-optiply = "tap_optiply.tap:TapOptiply.cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=tap_optiply --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
