[tool.poetry]
name = "tap-optiply"
version = "0.1.0"
description = "Singer tap for Optiply"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "tap_optiply"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
singer-sdk = "^0.34.0"
requests = "^2.31.0"
pytz = "^2024.1"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-optiply = "tap_optiply.tap:TapOptiply.cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=tap_optiply --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
